# unrardll

./: .appveyor.yml  .gitignore  .travis.yml  LICENSE  MANIFEST.in  PKG-INFO  README.rst  ci.py  publish.py  pyproject.toml  setup.cfg  setup.py  unrardll_0.1.3.orig.tar.gz.delta  unrardll_0.1.3.orig.tar.gz.id  unrardll_0.1.4.orig.tar.gz.asc  unrardll_0.1.4.orig.tar.gz.delta  unrardll_0.1.4.orig.tar.gz.id  unrardll_0.1.5.orig.tar.gz.asc  unrardll_0.1.5.orig.tar.gz.delta  unrardll_0.1.5.orig.tar.gz.id  unrardll_0.1.7+ds.orig.tar.xz.delta  unrardll_0.1.7+ds.orig.tar.xz.id  unrardll_0.1.7.orig.tar.gz.asc  unrardll_0.1.7.orig.tar.gz.delta  unrardll_0.1.7.orig.tar.gz.id
debian/: changelog  control  copyright  rules  salsa-ci.yml  watch
debian/patches/: 0002-Remove-Python-2-generated-file-from-source-file-list.patch  0003-Remove-nonexistent-file-from-manifest.patch  0003-Use-Python-3.patch  0004-Remove-Python-2-generated-file-from-source-file-list.patch  series  upstream-fix-download-url  upstream-include-tests
debian/patches/upstream/: 0001-Modernize-some-plumbing.patch  0002-Fix-4.patch  0002-ssize_t-not-defined-in-msvc.patch  0003-tests-move-test-file-to-something-easily-detected-by.patch  0004-Fix-6.patch
debian/upstream/: metadata
src/unrardll/: __init__.py  wrapper.cpp
src/unrardll.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: __init__.py  basic.py  example_split_archive.part1.rar  example_split_archive.part2.rar  example_split_archive.part3.rar  simple.rar
