[metadata]
name = unrardll
version = attr: unrardll.str_version
author = Kovid Goyal
author_email = no@no.no
description = Wrap the Unrar DLL to enable unraring of files in python
license = BSD
platforms = any
url = https://github.com/kovidgoyal/unrardll
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: System :: Archiving :: Compression

[options]
zip_safe = False
packages = unrardll
package_dir = 
	= src

[options.packages.find]
where = src

[flake8]
max-line-length = 160

[yapf]
based_on_style = pep8
column_limit = 85
split_penalty_import_names = 100
dedent_closing_brackets = True
coalesce_brackets = True
blank_line_before_nested_class_or_def = True

[isort]
combine_as_imports = True
line_length = 85
multi_line_output = 5

[egg_info]
tag_build = 
tag_date = 0

